# CameraModelTransfer

./: CMakeLists.txt  LICENSE  README.md
data/: CamTransfer  camera_0_universal_4121.txt  config.txt
include/: CameraModelTransfer.h  KannalaBrandt.h  common.h  config.h  matrix.h
src/: CameraModelTransfer.cpp  KannalaBrandt.cpp  common.cpp  config.cpp  matrix.cpp
